# macro-bytes-parser

./: Cargo.toml  README.md
parsing/: Cargo.toml
parsing-macro/: Cargo.toml
parsing-macro/src/: lib.rs
parsing/src/: lib.rs
parsing/tests/: derive_test.rs
src/: ase-file-specs.md  ase_file.rs  main.rs
test/: animated.aseprite
